# PerfLite

./: .gitignore  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  Looking at the `to_unit` function, it's doing  Makefile  README.md  The function should convert from the input duration to the target unit. But the way it's written, it's doing  build.sh  cmake_install.cmake  main.cpp  perf_lite.h  perf_lite_example  perf_lite_tests
.github/workflows/: ci-fast-tests.yml  run_tests.yml
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  benchmark_test.cpp  cmake_install.cmake  main.cpp  run_tests.sh  unit_tests.cpp
